# governance-platform

./: .gitignore  DATA_GOVERNANCE_GUIDE.md  IMPLEMENTATION_COVERAGE.md  LINEAGE.md  OPENLINEAGE.md  README.md  SAGEMAKER_MODEL_DEPLOYMENT.md  SAGEMAKER_PLATFORM_INTEGRATION.md  SETUP.md  TOOLS_BY_STAGE.md  docker-compose.yml  run_backend.sh
backend/: .env.example  pyproject.toml  requirements-governance.txt  requirements-optional.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0002_classification_runs.py  0003_drop_glossary_policies.py  0004_monitoring_datasets.py  0005_version_feature_importance.py  c059764ee166_initial_schema.py
backend/app/: main.py
backend/app/api/v1/: access_requests.py  ai_models.py  assets.py  audit.py  auth.py  bias_testing.py  catalog.py  classification.py  compliance.py  dashboard.py  deps.py  explainability.py  glossary.py  lineage.py  monitoring.py  policies.py  privacy.py  quality.py  risk_assessment.py  router.py  sources.py
backend/app/connectors/: base.py  credential_vault.py  registry.py
backend/app/connectors/databases/: mssql.py  mysql.py  postgresql.py
backend/app/connectors/datalakes/: aws_s3.py  azure_blob.py
backend/app/connectors/etl/: github_etl.py  parsers.py  repo_connector.py
backend/app/connectors/iam/: aws_iam.py  keycloak_connector.py
backend/app/connectors/model_registries/: azure_ml.py  mlflow_connector.py  sagemaker.py  vertex_ai.py
backend/app/connectors/warehouses/: bigquery.py  redshift.py
backend/app/core/: celery_app.py  config.py  database.py  security.py
backend/app/integrations/: openmetadata.py
backend/app/models/: __init__.py  _common.py  ai_models.py  assets.py  audit.py  bias.py  classification.py  compliance.py  glossary.py  identity.py  lineage.py  monitoring.py  policies.py  quality.py  risk.py  sources.py
backend/app/services/: ai_governance_service.py  ai_registry_sync.py  audit.py  bias_service.py  bootstrap.py  catalog_overview.py  catalog_service.py  classification_service.py  compliance_service.py  crawl_service.py  dashboard_service.py  dataset_loader.py  drift_service.py  explainability_service.py  lineage_service.py  monitoring_service.py  openlineage_service.py  openmetadata_service.py  pdf_service.py  privacy_service.py  quality_service.py  report_service.py  source_service.py
backend/app/workers/tasks/: _util.py  bias_tasks.py  crawler_tasks.py  monitoring_tasks.py  quality_tasks.py
backend/scripts/: acceptance_test.py  add_quality_rules.py  sample_data.sql
backend/scripts/etl/: 01_customer_revenue.sql  02_daily_sales.sql  03_product_performance.sql  04_payments_summary.sql  customer_360_etl.py  etl_pipeline.sql  shop_analytics_dag.py
backend/scripts/openlineage/: openlineage.yml  run_spark.sh  shop_to_analytics_spark.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: EChart.tsx  Layout.tsx  ProtectedRoute.tsx  ui.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AccessPage.tsx  AssetDetailPage.tsx  AuditPage.tsx  CatalogPage.tsx  ClassificationPage.tsx  CompliancePage.tsx  DashboardPage.tsx  GlossaryPage.tsx  LoginPage.tsx  (+8 more)
(+1 files in other folders)
